ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apps/v1/patient-service
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 3000   
      - path: /apps/v1/appointment-service
        pathType: Prefix
        backend:
          service:
            name: appointment-service 
            port:
              number: 5000   
      - path: /apps/v1/notification-service
        pathType: Prefix
        backend:
          service:
            name: notification-service 
            port:
              number: 4000   
      - path: /apps/v1/aggregation-service
        pathType: Prefix
        backend:
          service:
            name: aggregation-service 
            port:
              number: 4000
